# NiryoOneGrasping

./: .clang-tidy  README.md  run_clang_tidy.py
ObjectPose/: CMakeLists.txt  package.xml
ObjectPose/data/: meshes.txt
ObjectPose/include/: cluster.hpp  pose_estimation.hpp
ObjectPose/launch/: estimate_pose.launch
ObjectPose/msg/: positions.msg
ObjectPose/src/: Registration.cpp  cluster.cpp  main.cpp  pose_estimation.cpp  poses.cpp  reconstruction.cpp
clustering/: CMakeLists.txt  package.xml
clustering/include/: clustering.hpp  scene.hpp  segmentation.hpp
clustering/launch/: clustering.launch
clustering/src/: cluster.cpp  clustering.cpp  main.cpp  scene.cpp  segmentation.cpp
docker/: Dockerfile
generate_images/: CMakeLists.txt  my_hand_to_eye_transform.yml  package.xml
generate_images/data/: transform.yml
generate_images/include/: io_helper_functions.hpp
generate_images/launch/: broadcast_transform.launch  capture_images.launch  launch.launch
generate_images/src/: broadcast_transform.cpp  io_helper_functions.cpp  main.cpp  write_images_to_file.cpp
gpd_interaction/: CMakeLists.txt  package.xml
gpd_interaction/include/: GPDInteraction.hpp
gpd_interaction/launch/: gpd_and_pose.launch  gpd_interaction.launch
gpd_interaction/src/: gdp_interaction.cpp  gpd_interaction.cpp  main.cpp
grasp/: CMakeLists.txt  package.xml
grasp/src/: main.cpp
grasp_pose_broadcaster/: CMakeLists.txt  package.xml
grasp_pose_broadcaster/include/: grasp_pose_broadcaster.hpp
grasp_pose_broadcaster/launch/: centroid_pose_broadcaster.launch  grasp_pose_broadcaster.launch  visual_pose_broadcaster.launch
grasp_pose_broadcaster/src/: centroid.cpp  grasp_pose_broadcaster.cpp  main.cpp
integrate/: CMakeLists.txt  package.xml
integrate/include/: integrate.hpp
integrate/launch/: collect_data.launch  integrate.launch  integration.launch  integration_and_clustering.launch  integration_and_gpd.launch  integration_and_pose_estimation.launch  no_debug_integrate.launch  plain_integration.launch
integrate/src/: callbacks.cpp  communication.cpp  integrate.cpp  main.cpp  move_joints_client.cpp  plain_integration.cpp  serialize.py
pick_place/: CMakeLists.txt  package.xml
pick_place/action/: MoveJoints.action
pick_place/data/: joint_positions.txt
pick_place/include/: move_joints_server.hpp  picking.hpp  scene.hpp
pick_place/launch/: move_joints.launch
pick_place/src/: free_movement.cpp  main.cpp  move_joints.cpp  pick_place_tutorial.cpp  picking.cpp  scence.cpp  simple_pick_place.cpp
pick_place_6d/: CMakeLists.txt  package.xml
pick_place_6d/data/: joint_positions.txt
pick_place_6d/include/: move_joints_server.hpp  picking.hpp
pick_place_6d/launch/: move_joints.launch  picking.launch
pick_place_6d/src/: main.cpp  move_joints.cpp  picking.cpp  simple_pick_place.cpp
pose_estimation/: CMakeLists.txt  package.xml
pose_estimation/action/: BroadcastPose.action
pose_estimation/data/: ibuprofen.yml  meshes.txt  teebox_features.yml  teebox_features_NEW2.yml
pose_estimation/include/: broadcast_action_server.hpp  match.hpp  model.hpp  scene.hpp  target.hpp
pose_estimation/launch/: visual_pose.launch
pose_estimation/src/: broadcast_action_server.cpp  broadcast_transform.cpp  main.cpp  match.cpp  scence.cpp  target.cpp
real_time_pose_estimation/: CMakeLists.txt  package.xml
real_time_pose_estimation/Data/: camera_parameters.yml  kalman_parameters.yml  model.yml  parameters.yml  parse_python_commands.yml  teebox.ply
real_time_pose_estimation/include/: FileStream.hpp  PnPProblem.h  RSStream.hpp  Stream.hpp  VideoStream.hpp  detection_parse_parameters.hpp  kalman.hpp  ros_interaction.hpp  textured_pnp.hpp
real_time_pose_estimation/src/: CsvReader.cpp  FileStream.cpp  Model.cpp  PnPProblem.cpp  RSStream.cpp  RobustMatcher.cpp  Utils.cpp  VideoStream.cpp  affine_transformation.py  detection_parse_parameters.cpp  kalman.cpp  main.py  main_detection.cpp  main_registration.cpp  ros_interaction.cpp  run_affine_transformation.py
registration/: main.py  points1.npy  registration.py  transformed_box.pcd
utils/: CMakeLists.txt  package.xml
utils/include/: utils.hpp
utils/include/utils/: utils.hpp
utils/src/: utils.cpp
