<?xml version="1.0"?>
<package>
  <name>generate_images</name>
  <version>0.1.0</version>
  <description>The moveit_tutorials package</description>
  <license>BSD</license>
  <author email="fs@main.com">FS</author>

  <maintainer email="fs@main.com">FS</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

</package>
