<?xml version="1.0"?>
<package format="2">
  <name>pick_place</name>
  <version>0.0.0</version>
  <description>The niryo_one_tester package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="fschutze0@gmail.com">Fabian Schuetze</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>niryo_one_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend> genmsg</build_depend>
  <build_depend> tf_conversions</build_depend>
  <build_depend> pcl_ros</build_depend>
  <build_depend> cv_bridge</build_depend>
  <build_depend>pose_detection</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>niryo_one_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend> genmsg</exec_depend>
  <exec_depend> tf_conversions</exec_depend>
  <exec_depend> pcl_ros</exec_depend>
  <exec_depend> cv_bridge</exec_depend>
  <exec_depend>pose_detection</exec_depend>




  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
